# qmd

./: Cargo.toml  README.md
qmd/: Cargo.toml
qmd-cli/src/: main.rs
qmd/src/: db.rs  error.rs  lib.rs  qmd.rs  search.rs
skills/qmd-search/: SKILL.md
skills/qmd-search/scripts/: qmd_search.sh
