[workspace]
members = ["qmd", "qmd-cli"]
default-members = ["qmd", "qmd-cli"]
resolver = "3"

[workspace.package]
version = "0.5.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/qntx/qmd"

[workspace.dependencies]
qmd = { version = "0.5", path = "qmd" }

clap = { version = "4.6.0", features = ["derive"] }
ignore = "0.4"
rusqlite = { version = "0.39", features = ["bundled", "functions"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[profile.dev]
debug = true
opt-level = 0

[profile.test]
opt-level = 2

[profile.ci]
debug = false
inherits = "dev"

[profile.bench]
debug = true
inherits = "release"

[workspace.lints.rust]
elided_lifetimes_in_paths = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
rust_2024_compatibility = { level = "warn", priority = -1 }
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unsafe_code = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
clone_on_ref_ptr = "warn"
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
dbg_macro = "warn"
doc_markdown = "allow"
exhaustive_enums = "warn"
exhaustive_structs = "warn"
expect_used = "warn"
fn_params_excessive_bools = "allow"
future_not_send = "allow"
implicit_hasher = "allow"
missing_docs_in_private_items = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
must_use_candidate = "allow"
nursery = { level = "warn", priority = -1 }
option_if_let_else = "allow"
panic = "warn"
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
print_stderr = "warn"
print_stdout = "warn"
shadow_reuse = "warn"
shadow_same = "warn"
shadow_unrelated = "warn"
significant_drop_tightening = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
todo = "warn"
too_many_lines = "allow"
unimplemented = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
