[package]
name = "qmd"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"
authors = ["QNTX <x@qntx.fun>"]
description = "Lightweight local BM25 search engine for markdown files in Rust."
keywords = ["markdown", "search", "bm25", "fts5", "ai"]
categories = ["text-processing", "database"]

[lib]
name = "qmd"
path = "src/lib.rs"

[dependencies]
ignore.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[lints]
workspace = true
